<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@drawable/menu"
    tools:context=".Order_Pizza">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="165dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="363dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/pizza_menu"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/name"
        android:layout_width="183dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="553dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:forceDarkAllowed="false"
        android:hint="@string/name_field"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColorHint="#8A8585"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/cheese"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="245dp"
        android:layout_marginRight="245dp"
        android:layout_marginBottom="174dp"
        android:checked="false"
        android:text="@string/cheese_field"
        android:textColor="#000000"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/pork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="237dp"
        android:layout_marginLeft="237dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="175dp"
        android:text="@string/pork_field"
        android:textColor="#000000"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/onion"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:layout_marginBottom="120dp"
        android:text="@string/onion_field"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:layout_marginBottom="216dp"
        android:gravity="center_vertical"
        android:text="@string/topping_field"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/sauce"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="234dp"
        android:layout_marginLeft="234dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="120dp"
        android:text="@string/sauce_field"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="273dp"
        android:gravity="center_vertical"
        android:text="@string/quantity_field"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/more"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="257dp"
        android:layout_marginLeft="257dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="264dp"
        android:onClick="more"
        android:text="+"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/less"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:layout_marginBottom="263dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="less"
        android:text="-"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="203dp"
        android:layout_marginLeft="203dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="275dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/initial_quantity_value"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/orderPizzaCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="291dp"
        android:layout_marginRight="291dp"
        android:layout_marginBottom="457dp"
        android:background="@color/cardview_light_background"
        android:onClick="orderPizzaMain"
        android:text="Order" />

    <Button
        android:id="@+id/orderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="427dp"
        android:background="@color/cardview_light_background"
        android:onClick="orderSummary"
        android:text="Summary" />

    <Button
        android:id="@+id/callStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="455dp"
        android:background="@color/cardview_light_background"
        android:onClick="callStore"
        android:text="Contact" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:layout_marginBottom="318dp"
        android:text="Extra Chicken"
        android:textColor="#000000" />


</RelativeLayout>
